Run terser on ts install
Genreate sources maps

--- a/extensions/package.json
+++ b/extensions/package.json
@@ -9,6 +9,7 @@
     "postinstall": "node ./postinstall"
   },
   "devDependencies": {
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "terser": "^4.7.0"
   }
 }
